new-home.css
body {
	margin: 0px;
}

body {
	background-image: url("images/skyline.png");
	background-position: bottom;
	background-size: cover;
	height: 100%;
	max-width: 100%;
	min-width: 100%;
	align-content: center;
	overflow: hidden;
	margin: 0;
	z-index: 1;
}

footer {
	margin: 0px;
	position: fixed;
	bottom: 0;
	z-index: 3;
	background-image: linear-gradient(transparent, #29293d);
	height: 10%;
	width: 100%;
}

footer p {
	margin:0px;
	top:50%;
	left:50%;
	text-align: center;
	position: absolute;
	color:white;
	font-family: Whitney;
	text-align: center;
	transform: translate(-50%, -50%);
}

#menu {
	z-index: 9;
	position: fixed;
	display: block;
	height: 100%;
	width: 0%;
	right: 0;
	top: 0;
	opacity: 0;
	background-color: white;
	box-shadow: 0px 0px 3px white;
}

#menu hr {
	z-index: 11;
	position: relative;
	top:10%;
	width: 90%;
	color: lightgray;
	justify-content: center;
}

#menu span {
	z-index: 11;
	padding: 15% 5%;
	display: contents;
	position: relative;
	top:10%;
	text-align: center;
	position: absolute;
	color: darkslategray;
	font-family: Whitney;
	text-align: center;
	transform: translate(-50%, -50%);
}

.title {
	width: 100%;
	height: 100%;
	display: block;
	position: absolute;
	z-index: 1;
}

.title h1 {
	opacity: 0;
	animation: slideInFade ease 1s;
	animation-delay: .75s;
	animation-fill-mode: forwards;
	position: relative;
	text-shadow: 0px 0px 10px black;
	color: white;
	font-family: Bebas;
	font-size: 6vw;
	text-align: center;
	top: 32%;
	padding: 0;
	margin: 0;
}

.title h3 {
	opacity: 0;
	animation: slideInFade ease 1s;
	animation-delay: .5s;
	animation-fill-mode: forwards;
	position: relative;
	text-shadow: 0px 0px 10px black;
	color: white;
	font-family: Bebas;
	font-size: 2vw;
	text-align: center;
	margin: 0;
	padding:0;
	top: 32%;
}

.toolbar {
	margin: 0px;
	position: fixed;
	z-index: 10;
	background-image: linear-gradient(#29293d, transparent);
	height: 10%;
	width: 100%;
}

.toolbar a img {
	transform: scale(.90);
	margin-top: .25em;
	margin-left: .25em;
	padding: 0;
	z-index: 10;
	transition: .2s;
	position: absolute;
	height: 100%;
}

.toolbar a img:hover {
	transform: scale(.95);
	transition: .2s;
	position: absolute;
	height: 100%;
}

.toolbar #links {
	position: relative;
	width: 100%;
	height: 100%;
}

.toolbar #links ul {
	margin: 0;
	padding: 0;
	position: absolute;
	transform: translate(50%, -50%);
	top: 50%;
	right: 50%;
	z-index: 11;
}

.toolbar #links ul li {
	display: inline-block;
	margin: 40px;
	transition: .2s;
}

.toolbar #links ul li a {
	color:white;
	font-size: 150%;
	font-family: Whitney;
	text-align: center;
	text-decoration: none;
	color: lightgray;
	transition: .2s;
	letter-spacing: 1px;
	text-shadow: 0px 0px 1px black;
}

.toolbar #links ul li a:hover {
	color:white;
	text-shadow: 0px 0px 1px white;
}

.toolbar #links ul li:hover {
	transform: scale(1.05);
	transition: .2s;
}

.toolbar #menuButton {
	transition-duration: .2s;
	z-index: 10;
	position: absolute;
	right: 0;
	height: 100%;
	margin: 0em .75em 0px 0px;
	padding: 0;
}

.toolbar #menuButton:hover {
	z-index: 10;
	transform: scale(1.05);
	transition-duration: .2s;
	position: absolute;
	right: 0;
	height: 100%;
	margin: 0em .75em 0px 0px;
	cursor: pointer;
}

.toolbar #menuButton div {
	z-index: 10;
	transition-duration: .2s;
	position: relative;
	box-shadow: 0px 0px 5px black;
	background-color: lightgray;
	padding: 5px 35px;
	margin-top: .75em;
}

.toolbar #menuButton:hover div {
	z-index: 10;
	transition-duration: .2s;
	position: relative;
	box-shadow: 0px 0px 5px white;
	background-color: white;
	padding: 5px 35px;
	margin-top: .75em;
}

.sidebar {
	height: 100%;
	width: 1%;
	display: block;
	position: absolute;
	z-index: 4;
}

.sidebar div {
	z-index: 4;
	position: relative;
	box-shadow: 0px 0px 5px black;
	background-color: lightgray;
	transition: .2s;
	padding: 30px 5px;
	top:40%;
	margin: 50%;
}

.sidebar div span {
	white-space: nowrap;
	opacity: 0;
	position: absolute;
	font-family: Whitney;
	color: white;
	transition: .2s;
	top:50%;
	left:100%;
	transform: rotateY(90deg) translate(0%, -50%);
	transform-origin: left;
	padding: 20px 100%;
}

.sidebar div:hover {
	background-color: white;
	box-shadow: 0px 0px 5px white;
	transform: scale(1.1);
	transition: .2s;
	cursor: pointer;
}

.sidebar div:hover span {
	text-shadow: 0px 0px 2px black;
	white-space: nowrap;
	opacity: 1;
	transform: translate(0%, -50%);
	background-color: rgba(211, 211, 211, .5);
	transition: .2s;
	cursor: pointer;
}

.js-stop-transition { 
	transition:none !important; 
}

@font-face {
	font-family: Bebas;
	src: url("BebasNeueBold.otf") format("opentype");
}

@font-face {
	font-family: Whitney;
	src: url("whitney-semibold.otf") format("opentype");
}

@keyframes slideInFade {
	0% {
		top:50%;
		text-shadow: 0px 20px 10px white;
		opacity: 0;
	}
	100% {
		top:32%;
		text-shadow: 0px 0px 10px black;
		opacity: 1;
	}
}

